@@ -269,3 +269,12 @@ class ContactMechanism(sequence_ordered(), ModelSQL, ModelView):
                     'phone': self.value,
                     'party': self.party.rec_name
                     })
+
+    @classmethod
+    def usages(cls, _fields=None):
+        "Returns the selection list of usage"
+        usages = [(None, "")]
+        if _fields:
+            for name, desc in cls.fields_get(_fields).iteritems():
+                usages.append((name, desc['string']))
+        return usages
